<resources>
    <string name="app_name">Database</string>
    <string name="username">Username</string>
    <string name="show_username">Show Username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="login">log in</string>
    <string name="capyconnect">CapyConnect</string>
    <string name="log">log in</string>
    <string name="register1">Register</string>
</resources>