<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etMessage"
        android:layout_width="312dp"
        android:layout_height="78dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:textColorHint="#fafaf5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="TextFields,TextContrastCheck" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="text"
        android:textColorHint="#fafaf5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542"
        tools:ignore="DuplicateIds,TextContrastCheck" />


    <TextView
        android:id="@+id/CapyConnect"
        android:layout_width="194dp"
        android:layout_height="35dp"
        android:background="#87CEFA"

        android:text="@string/capyconnect"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/etMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:backgroundTint="#ede60e"
        android:text="@string/log"
        android:textColor="#000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:backgroundTint="#ede60e"
        android:text="@string/register1"
        android:textColor="#000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        tools:ignore="MissingConstraints"
        tools:text="@string/register" />

</androidx.constraintlayout.widget.ConstraintLayout>


